<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dictionaryImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/dictionary_default_img" />

    <TextView
        android:id="@+id/dictionaryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_dictionary_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/dictionaryShortNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_short_note_about_vocabulary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dictionaryWordsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="350"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_words_amount"
        android:textSize="20sp" />
</LinearLayout>