<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_dialog_bg">

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dialog_font"
        android:text="@string/edit_word_title"
        android:textColor="#666666"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editWordOriginal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_info_field_bg"
        android:ellipsize="end"
        android:gravity="top"
        android:hint="@string/new_word_original"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="2"
        android:paddingStart="16dp"
        android:paddingTop="3dp"
        android:paddingEnd="16dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editWordTranslation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editWordOriginal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_info_field_bg"
        android:ellipsize="end"
        android:gravity="top"
        android:hint="@string/new_word_translation"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="2"
        android:paddingStart="16dp"
        android:paddingTop="3dp"
        android:paddingEnd="16dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editWordMeaning"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/editWordTranslation"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_info_field_bg"
        android:ellipsize="end"
        android:gravity="top"
        android:hint="@string/new_word_meaning"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="2"
        android:paddingStart="16dp"
        android:paddingTop="3dp"
        android:paddingEnd="16dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/editWordCancelBtn"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editWordMeaning"
        android:layout_alignStart="@+id/editWordMeaning"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/cancel_btn_bg"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/cancel_btn_text"
        android:textAllCaps="false"
        android:textColor="#858585"
        android:textSize="20sp" />

    <Button
        android:id="@+id/editWordCommitBtn"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editWordMeaning"
        android:layout_alignEnd="@+id/editWordMeaning"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/commit_btn_bg"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/commit_btn_text"
        android:textAllCaps="false"
        android:textColor="#858585"
        android:textSize="20sp" />
</RelativeLayout>