<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dictionaryCreateImg"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/dictionary_default_img" />

    <TextView
        android:id="@+id/setImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dictionaryCreateImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/text_rotesk_corp_regular"
        android:padding="8dp"
        android:text="@string/create_dictionary_edit_image"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dictionaryCreateName"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/setImgBtn"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/text_rotesk_corp_regular"
        android:gravity="center_horizontal"
        android:text="@string/item_dictionary_name"
        android:textSize="30sp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/shortNoteLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dictionaryCreateName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/text_rotesk_corp_regular"
        android:text="Short note:"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/addShortNote"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/shortNoteLine"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/text_rotesk_corp_regular"
        android:hint="@string/create_dictionary_short_note_hint"
        android:maxLength="30"
        android:maxLines="1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/completeDictionaryCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/create_dictionary_btn_bg"
        android:fontFamily="@font/text_rotesk_corp_regular"
        android:padding="10dp"
        android:text="@string/create_dictionary_btn"
        android:textAllCaps="false"
        android:textSize="25sp" />
</RelativeLayout>